set(PROJECT_NAME_STR KDIS)

find_package(Threads REQUIRED)

CPMAddPackage(
  NAME googletest
  GITHUB_REPOSITORY google/googletest
  GIT_TAG v1.14.0
  EXCLUDE_FROM_ALL ON
  SYSTEM ON
  OPTIONS "INSTALL_GTEST OFF" "gtest_force_shared_crt ON"
)

enable_testing()
set(PROJECT_TEST_NAME ${PROJECT_NAME_STR}_tests)
include_directories(${GTEST_INCLUDE_DIRS} ${COMMON_INCLUDES})
include_directories(${KDIS_SOURCE_DIR})
file(GLOB TEST_SRC_FILES *.cpp)
add_executable(${PROJECT_TEST_NAME} ${TEST_SRC_FILES})
target_link_libraries(${PROJECT_TEST_NAME} gtest_main)
add_test(${PROJECT_TEST_NAME} ${PROJECT_TEST_NAME})

if(BUILD_EXAMPLES_TO_LINK_TO_LIB)

  if(EXAMPLES_USE_STATIC_OR_SHARED_LIB MATCHES STATIC)
    target_link_libraries(${PROJECT_TEST_NAME} KDIS_LIB)
  endif(EXAMPLES_USE_STATIC_OR_SHARED_LIB MATCHES STATIC)

  if(EXAMPLES_USE_STATIC_OR_SHARED_LIB MATCHES SHARED)
    target_link_libraries(${PROJECT_TEST_NAME} KDIS_DLL)
    add_definitions(-D "IMPORT_KDIS")
  endif(EXAMPLES_USE_STATIC_OR_SHARED_LIB MATCHES SHARED)

endif(BUILD_EXAMPLES_TO_LINK_TO_LIB)

if(DIS_VERSION MATCHES 6)
  add_definitions(-D "DIS_VERSION=6")
endif(DIS_VERSION MATCHES 6)

if(DIS_VERSION MATCHES 5)
  add_definitions(-D "DIS_VERSION=5")
endif(DIS_VERSION MATCHES 5)

if(DIS_VERSION MATCHES 7)
  add_definitions(-D "DIS_VERSION=7")
endif(DIS_VERSION MATCHES 7)

if(KDIS_USE_ENUM_DESCRIPTORS)
  add_definitions(-D "KDIS_USE_ENUM_DESCRIPTORS")
endif(KDIS_USE_ENUM_DESCRIPTORS)

# target_link_libraries(${PROJECT_TEST_NAME} ${CMAKE_THREAD_LIBS_INIT})
